--- a/common/common.scss
+++ b/common/common.scss
@@ -365,8 +365,7 @@ a.mention,
 a.mention-group,
 .topic-post article.boxed,
 .main-content .list-controls,
-.main-content.nav-menu-enabled .list-controls,
-.d-header img.avatar {
+.main-content.nav-menu-enabled .list-controls {
 	border-radius: 0;
 }
 
