--- a/common/common.scss
+++ b/common/common.scss
@@ -1190,6 +1190,16 @@ section.post-menu-area {
 	display: inline-block;
 }
 
+.presence-users {
+    background-color: rgba(19, 20, 24, .9);
+    color: #ffffff;
+    padding: .5em;
+    display: block;
+    width: 743px;
+    margin-bottom: 1em;
+    max-width: 100%;
+}
+
 // apendex --------------------------
 
 .vincent {
