--- a/common/common.scss
+++ b/common/common.scss
@@ -1210,6 +1210,10 @@ section.post-menu-area {
 	padding-bottom: 0.5em;
 }
 
+.admin-content .admin-contents, .admin-detail {
+    padding: 1.5em;
+}
+
 // apendex --------------------------
 
 .vincent {
