--- a/common/common.scss
+++ b/common/common.scss
@@ -1174,6 +1174,6 @@ button.post-retort:first-of-type {
 
 #whos-online {
 	padding: 1em 1.5em;
-	background: rgba(19, 20, 24, 0.9);
+	background: $main-background;
 	margin-bottom: 1em;
 }
