--- a/common/common.scss
+++ b/common/common.scss
@@ -875,6 +875,10 @@ section.embedded-posts.top {
 	width: 743px;
 }
 
+.wrap {
+    max-width: 1110px;
+}
+
 // Animation  ------------------------------------------------------------------------------------------
 
 a,
