--- a/common/common.scss
+++ b/common/common.scss
@@ -854,7 +854,7 @@ section.embedded-posts.top {
 .alert,
 #share-link.visible,
 .wrap {
-	max-width: 95vw;
+	max-width: 95vw !important;
 }
 
 // custom ---------------------------------------------
