--- a/common/common.scss
+++ b/common/common.scss
@@ -1145,6 +1145,10 @@ section.post-menu-area {
 	position: relative;
 }
 
+#topic-title h1 {
+    font-size: 1.25em;
+}
+
 // apendex ------------------------------------------------------------------------------------------
 
 .vincent {
